K  6965	setting mail.<protocol>.auth.mechanisms should override
	mail.<protocol>.auth.<mechanism>.disable
K  6966	add support for OAuth 2.0 without SASL
K  6973	capability() command doesn't properly transform errors
K  6989	MailHandler needs better support for stateful filters.
K  6997	add support for IMAP login referrals (RFC 2221)


		  CHANGES IN THE 1.5.4 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.4 release.

K  6719	Include elapsed time, thread id, and sequence for logging formatters.
K  6767	MailHandlerTest does not check field is static or final
K  6804	IdleManager can deadlock with frequent notifications
K  6817	IdleManager can deadlock when connection fails
K  6824	IMAP provider should support the MOVE extension (RFC 6851)
K  6840	MODSEQ should be stored in IMAPMessage if CONDSTORE is enabled
K  6844	Space character lost from end of quoted-printable body parts
K  6850	GmailMessage extensions are not cached after implicit FETCH
K  6852	IMAP message sets should be sorted in cases where order doesn't matter
K  6860	ID command shouldn't escape NIL value
K  6863	Make IMAPProtocol class extendable


		  CHANGES IN THE 1.5.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.3 release.

K  6379	Make constructor of POP3Folder protected to allow subclassing
K  6407	calling IdleManager.watch twice on same folder fails
K  6430	NPE in IMAPFolder.copyUIDMessages when COPYUID not returned
K  6496	Message-Id leaks current user/hostname of the Java process (security)
K  6498	IMAP idle breaks interrupt flag
K  6526	Date search terms result in wrong greater-than SEARCH commands for IMAP
K  6535	address similar to (x)<y>(z) will throw StringIndexOutOfBoundsException
K  6551	Update logging demos to use the new 1.5.2 features
K  6552	Use classloader ergonomics in the MailHandler
K  6585	ArrayIndexOutOfBoundsException in IMAPFolder.copyUIDMessages